// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`copy webpub assets properly 1`] = `
"output/
├─ doc.html
├─ publication.json
└─ themes/
   └─ node_modules/
      ├─ @org/
      │  └─ themeB/
      │     └─ theme.css
      └─ themeA/
         └─ theme.css"
`;

exports[`generate webpub from a plain HTML 1`] = `
"output/
├─ publication.json
├─ style.css
└─ webbook.html"
`;

exports[`generate webpub from a plain HTML 2`] = `
Object {
  "@context": Array [
    "https://schema.org",
    "https://www.w3.org/ns/pub-context",
  ],
  "conformsTo": "https://github.com/vivliostyle/vivliostyle-cli",
  "inLanguage": "ja",
  "links": Array [],
  "name": "Doc title",
  "readingOrder": Array [
    Object {
      "url": "webbook.html",
    },
  ],
  "resources": Array [
    "style.css",
  ],
  "type": "Book",
}
`;

exports[`generate webpub from a plain HTML 3`] = `
"<!DOCTYPE html>
<html lang=\\"ja\\">
  <head>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"style.css\\" />
    <title>Doc title</title>
    <link
      rel=\\"publication\\"
      type=\\"application/ld+json\\"
      href=\\"publication.json\\"
    />
  </head>
  <body></body>
</html>
"
`;

exports[`generate webpub from a remote HTML document 1`] = `
"output/
├─ publication.json
└─ remote/
   ├─ foo bar%/
   │  └─ escape check%.html
   └─ あ/
      └─ 日本語.css"
`;

exports[`generate webpub from a remote HTML document 2`] = `
Object {
  "@context": Array [
    "https://schema.org",
    "https://www.w3.org/ns/pub-context",
  ],
  "conformsTo": "https://github.com/vivliostyle/vivliostyle-cli",
  "inLanguage": "en",
  "links": Array [],
  "name": "Document",
  "readingOrder": Array [
    Object {
      "url": "remote/foo%20bar%25/escape%20check%25.html",
    },
  ],
  "resources": Array [
    "remote/%E3%81%82/%E6%97%A5%E6%9C%AC%E8%AA%9E.css",
  ],
  "type": "Book",
}
`;

exports[`generate webpub from a remote HTML document 3`] = `
"<html lang=\\"en\\">
  <head>
    <title>Document</title>
    <link
      rel=\\"stylesheet\\"
      type=\\"text/css\\"
      href=\\"../%E3%81%82/%E6%97%A5%E6%9C%AC%E8%AA%9E.css\\"
    />
    <link
      rel=\\"publication\\"
      type=\\"application/ld+json\\"
      href=\\"../../publication.json\\"
    />
  </head>
  <body></body>
</html>
"
`;

exports[`generate webpub from a single-document publication 1`] = `
"output/
├─ assets/
│  ├─ subdir.css
│  └─ 日本語.svg
├─ escape check%.html
├─ subdir/
│  └─ index.html
└─ webbook.html"
`;

exports[`generate webpub from a single-document publication 2`] = `
"<html lang=\\"en\\">
  <head>
    <title>Document with toc</title>
    <link rel=\\"publication\\" href=\\"#wp_manifest\\" />
    <script type=\\"application/ld+json\\" id=\\"wp_manifest\\">
      {
        \\"@context\\": [\\"https://schema.org\\", \\"https://www.w3.org/ns/wp-context\\"],
        \\"conformsTo\\": \\"yuno\\",
        \\"resources\\": [\\"assets/%E6%97%A5%E6%9C%AC%E8%AA%9E.svg\\"],
        \\"readingOrder\\": [
          \\"#foo\\",
          \\"../bar.html\\",
          \\"subdir/index.html\\",
          \\"escape%20check%25.html\\"
        ]
      }
    </script>
  </head>
  <body></body>
</html>
"
`;

exports[`generate webpub from remote HTML documents with publication manifest 1`] = `
"output/
├─ assets/
│  └─ 日本語.png
└─ remote/
   ├─ dir/
   │  ├─ escape check%.html
   │  └─ index.html
   └─ publication.json"
`;

exports[`generate webpub from single markdown file 1`] = `
"output/
├─ foo.html
└─ publication.json"
`;

exports[`generate webpub from single markdown file 2`] = `
Object {
  "@context": Array [
    "https://schema.org",
    "https://www.w3.org/ns/pub-context",
  ],
  "conformsTo": "https://github.com/vivliostyle/vivliostyle-cli",
  "links": Array [],
  "name": "Hi",
  "readingOrder": Array [
    Object {
      "name": "Hi",
      "url": "foo.html",
    },
  ],
  "resources": Array [],
  "type": "Book",
}
`;

exports[`generate webpub from vivliostyle.config.js 1`] = `
"output/
├─ cover.html
├─ cover.png
├─ doc/
│  ├─ escape check%.html
│  ├─ one.html
│  └─ two.html
├─ index.html
├─ publication.json
├─ style sheet.css
└─ themes/
   └─ node_modules/
      └─ mytheme/
         └─ %style%.css"
`;

exports[`generate webpub from vivliostyle.config.js 2`] = `
Object {
  "@context": Array [
    "https://schema.org",
    "https://www.w3.org/ns/pub-context",
  ],
  "conformsTo": "https://github.com/vivliostyle/vivliostyle-cli",
  "links": Array [],
  "name": "output",
  "readingOrder": Array [
    Object {
      "rel": "cover",
      "type": "LinkedResource",
      "url": "cover.html",
    },
    Object {
      "name": "Table of Contents",
      "rel": "contents",
      "type": "LinkedResource",
      "url": "index.html",
    },
    Object {
      "url": "doc/one.html",
    },
    Object {
      "url": "doc/two.html",
    },
    Object {
      "url": "doc/escape%20check%25.html",
    },
  ],
  "readingProgression": "rtl",
  "resources": Array [
    Object {
      "encodingFormat": "image/png",
      "name": "Cover image",
      "rel": "cover",
      "url": "cover.png",
    },
    "style%20sheet.css",
    "themes/node_modules/mytheme/%25style%25.css",
  ],
  "type": "Book",
}
`;

exports[`generate webpub with complex copyAsset settings 1`] = `
"output/
├─ assetA.jxl
├─ doc.html
├─ node_modules/
│  └─ pkgB/
│     ├─ a.html
│     └─ bar/
│        └─ b.html
└─ publication.json"
`;
